--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Blog Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "author": "Mustafijur Rahaman",
   "license": "ISC",
   "dependencies": {
